--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,9 @@
                 <artifactId>formatter-maven-plugin</artifactId>
                 <version>2.23.0</version>
                 <configuration>
-                    <style>google</style>
+                    <configFile>
+                        https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml</configFile>
+                    <encoding>UTF-8</encoding>
                 </configuration>
                 <executions>
                     <execution>
@@ -59,6 +61,7 @@
                     </execution>
                 </executions>
             </plugin>
+
 
         </plugins>
     </build>
